--- a/details.html
+++ b/details.html
@@ -10,27 +10,46 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="bg-warning p-4">
-      <h1 class="text-center">DETAILS</h1>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand px-4" href="#"><img src="./assets/LOGO_OF_LOGO.svg" alt="" style="height: 30px" /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active fs-4" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fs-4" href="./back-office.html">Back-office</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="bg-tertiary mt-4">
+      <h1 class="text-center fw-bold">DETAILS</h1>
     </div>
-    <div id="eventDetails" class="container">
-      <h4 class="text-center mt-5">Product</h4>
-      <p class="text-center">Description</p>
-      <p class="text-center">Brand</p>
-      <div class="text-center"><img src="..." alt="..." /></div>
-      <p class="text-center">price</p>
-      <p class="text-center">id: 5241xv687671c16</p>
-      <p class="text-center">user id: 5rsg5ùsFvs5d</p>
-      <p class="text-center">createdAt: 25/08/23</p>
-      <p class="text-center">updatedAt: 25/08/23</p>
-    </div>
+    <div id="productDetails" class="container"></div>
+    <div class="text-center"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
+
+    <script src="./script-details.js"></script>
   </body>
 </html>
